--- a/src/pages/Footer/style.css
+++ b/src/pages/Footer/style.css
@@ -1,5 +1,5 @@
 .footer{
-    height: 666px;
+    min-height: 666px;
     /* border: 4px solid red; */
     background-color: #009FD4;
     padding: 95px 0;
@@ -49,8 +49,17 @@
 .footer-flex{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    /* grid-gap: 190px; */
+    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+
+
+
     
+    
+}
+
+
+.footer-flex > div{
+    flex-basis: 50%;
 }
 
 .col-3{
@@ -103,4 +112,17 @@
     align-items: center;
     justify-content: center;
     z-index: -1;
+}
+
+
+
+
+
+
+
+@media (max-width:1080px) {
+    .footer-text{
+        width: 100%;
+        font-size: 13px ;
+    }
 }
