--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Cera Pro';
-    /* border: 1px solid red; */
+    border: 1px solid red;
 }
 
 @font-face {
@@ -81,6 +81,20 @@ p{
     font-weight: 500;
     
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
