--- a/src/pages/AboutComponent/style.css
+++ b/src/pages/AboutComponent/style.css
@@ -18,9 +18,16 @@
 
 .top{
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: flex-end;
     margin-right: 100px;
+    /* background-color: red; */
+
+    /* border: 3px solid green; */
+
+
+    
 }
 
 .bottom{
@@ -33,7 +40,7 @@
     display: flex;
     align-items: center;
     gap: 16px;
-    width: 670px;
+    max-width: 670px;
     margin-top: 24px;
     margin-bottom: 90px;
 }
@@ -42,7 +49,7 @@
 
 
 .box{
-    width: 600px;
+    max-width: 600px;
     margin-top: 60px;
 }
 
@@ -58,10 +65,63 @@
     position: absolute;
     left: 0;
     top: 5rem;
+    display: none;
 }
 
 .about-image2{
     position: absolute;
     right: 0;
     bottom: 0;
+    display: none;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width:850px) {
+    .top,
+    .bottom{
+        border: 5px solid green;
+        width: 100%;
+    }
+
+    .bottom{
+        margin-left: 0;
+    }
+
+
+
+}
+
