--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -28,3 +28,29 @@
     text-decoration: none;
     color: #000000;
 }
+
+
+.nav-open{
+    display: none;
+    font-size: 25px;
+}
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 950px) {
+    nav{
+        display: none;
+    }
+
+    .nav-open{
+        display: flex;
+    }
+}
