--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@ img{
 p{
     font-weight: 500;
     letter-spacing: 1.7px;
-    font-size: 18px;
+    font-size: 17px;
 }
 
 .bold-text{
@@ -100,6 +100,7 @@ p{
 @media (max-width:1080px) {
     p{
         font-size: 13px ;
+        letter-spacing: normal;
     }
 }
 
