--- a/src/pages/Footer/style.css
+++ b/src/pages/Footer/style.css
@@ -47,16 +47,17 @@
 
 
 .footer-flex{
-    /* display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
-    max-width: 100%; */
-
     display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+    gap: 1rem;
+  
+
 
     
     
+}
+
+.footer-flex > div{
+    flex-basis: 50%;
 }
 
 
@@ -67,13 +68,17 @@
 
 
 .col-3{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 70px;
+    /* display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
     margin-top: 50px;
+    gap: 70px; */
+    margin-left: 80px;
+    display: flex;
+    gap: 50px; 
 
 }
+
+
 
 .col{
     display: flex;
@@ -127,9 +132,27 @@
 
 
 
-@media (max-width:1080px) {
+@media (max-width:1024px) {
     .footer-text{
         width: 100%;
+        font-size: 13px;
+    }
+    .footer-flex > div {
+        width: 100%;
+    }
+
+   
+}
+
+
+@media (max-width:900px){
+    .footer-flex{
+        flex-direction: column;
+    }
+
+    .col-3{
+        margin: 0;
+        justify-content: space-between;
     }
 }
 
@@ -137,7 +160,7 @@
 
 @media (max-width:600px) {
     .col-3{
-        gap: 20px;
+        gap: 40px;
     }
 }
 
@@ -162,12 +185,22 @@
 @media (max-width:430px) {
     .col-3{
         display: flex;
-        align-items: center;
-        flex-direction: column;
-        justify-content: center;
+        /* align-items: center; */
+        flex-wrap: wrap;
+        /* flex-direction: column; */
+        justify-content: flex-start;
     }
 
+}
+
+
+@media (max-width:315px){
+    .col-3{
+        justify-content: center;
+        flex-direction: column;
+    }
+    
     .col{
         align-items: center;
     }
-}
+} 
