--- a/src/pages/HeroComponents/style.css
+++ b/src/pages/HeroComponents/style.css
@@ -1,5 +1,6 @@
 .showcase{
     width: 100%;
+    overflow: hidden;
 }
 
 .hero{
@@ -36,13 +37,7 @@
     margin-top: 18px;
 }
 
-.hero-2{
-    min-height: 1600px;
-    border: 1px solid red;
-    display: flex;
-    flex-direction: column;
-    /* position: relative; */
-}
+
 
 .image1{
     position: absolute;
@@ -64,23 +59,9 @@
     /* background: #FDFDFD; */
 }
 
-/* .underline{
-    position: absolute;
-    width: 70px;
-    height: 12px;
-    left: 1090px;
-    z-index: 1;
-    top: 140px;
-} */
 
 
 
-.about{
-    /* position: relative; */
-    display: flex;
-    min-height: 800px;
-    /* border:3px solid yellow; */
-}
 
 .image2{
     position: absolute;
@@ -88,24 +69,8 @@
     bottom: 0;
 }
 
-.content{
-    /* border: 3px solid red; */
-    z-index: 9999;
-}
 
 
-
-/* .box{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 0px;
-    gap: 42px;
-    position: absolute;
-    width: 500px;
-    left: 653px;
-    top: 240px;
-} */
 
 .box p{
     /* font-family: 'Cera Pro'; */
@@ -146,6 +111,14 @@
         flex-direction: column;
     }
 
+    .hero{
+        padding-top: 50px;
+    }
+
+    .flex-2 img{
+        width: 200px;
+    }
+
     .content{
         text-align: center;
         justify-content: center;
@@ -154,3 +127,8 @@
 }
 
 
+@media (max-width:500px){
+    .bold-text{
+        font-size: 30px;
+    }
+}
