--- a/src/pages/FoundersComponent/style.css
+++ b/src/pages/FoundersComponent/style.css
@@ -17,6 +17,7 @@
     /* border: 1px solid green; */
     margin-top: 98px;
     display: flex;
+    width: 100%;
     gap: 10px;
     overflow-x: hidden;
 }
@@ -75,4 +76,29 @@
 
 
 
+@media screen and (max-width: 500px) {
+    .founder-container {
+      justify-content: center;
+    }
 
+  
+
+}
+/* @media screen and (min-width: 640px) {
+    .founder-container {
+      width: 640px;
+      background-color: green;
+    }
+  }
+  
+  @media screen and (min-width: 768px) {
+    .founder-container {
+      width: 768px;
+    }
+  }
+
+  @media screen and (min-width: 1024px) {
+    .founder-container {
+      width: 100%;
+    }
+  } */
