--- a/src/pages/WhatWeOfferComponent/style.css
+++ b/src/pages/WhatWeOfferComponent/style.css
@@ -115,3 +115,19 @@ img{
         width: 100%;
     }
 }
+
+
+
+@media (max-width:850px){
+
+    .arrow2{
+        margin: 0;
+        width: 80px;
+    }
+
+    .arrow1{
+        margin-right: 0;
+        width: 80px;
+    }
+
+}
