--- a/src/pages/FoundersComponent/style.css
+++ b/src/pages/FoundersComponent/style.css
@@ -81,8 +81,18 @@
       justify-content: center;
     }
 
-  
+  .bold{
+    font-size: 30px;
+  }
 
+}
+
+
+
+@media screen and (max-width: 360px){
+    .bold{
+      font-size: 25px;
+    }
 }
 /* @media screen and (min-width: 640px) {
     .founder-container {
