--- a/src/pages/HeroComponents/showcase.css
+++ b/src/pages/HeroComponents/showcase.css
@@ -13,6 +13,12 @@
 
 }
 
+.waitlist-arrow{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 15px;
+}
 
 
 .hero-content{
@@ -52,7 +58,21 @@
     position: absolute;
     left: 7.5%;
     bottom: 0;
+    color: #4087EA;
 }
+
+.arrow-mobile{
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px solid #444444;
+    color: #444444;
+    border-radius: 15px;
+    display: none;
+}
+
 
 
 
@@ -92,8 +112,13 @@
             "box-a";
     }
 
-    .arrow{
+    .arrow-pc{
         display: none;
+    }
+
+
+    .arrow-mobile{
+        display: flex;
     }
 
     .hero-image{
