--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,10 @@
     padding: 0;
     box-sizing: border-box;
     font-family: poppins;
-    /* border: 1px solid red; */
+}
+
+*::after{
+    margin: 0;
 }
 
 
@@ -33,7 +36,6 @@ img{
     object-fit: cover;
     max-width: 100%;
     display: block;
-    object-fit: cover;
 }
 
 p{
@@ -51,12 +53,13 @@ p{
     color: #ffffff;
     cursor: pointer;
     transition: 500ms ease-in-out;
+    text-decoration: none;
 }
 
 .btn:hover{
     background-color: transparent;
     color: #4087EA;
-    font-weight: 500;
+    font-weight: 400;
     border: 1px solid #4087EA;
 }
 
@@ -81,11 +84,19 @@ p{
     border: none;
     font-weight: bold;
     background-color: transparent;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 
 
 .color{
     color: #4087EA;
+}
+
+.muted{
+    opacity: 0.7;
 }
 
