--- a/src/pages/Footer/footer.css
+++ b/src/pages/Footer/footer.css
@@ -48,6 +48,7 @@
 .footer a{
     text-decoration: none;
     color: #444;
+    opacity: 0.7;
 }
 
 
@@ -152,24 +153,20 @@
     }
 
     .col-3{
-        gap: 40px;
+        gap: 80px;
+        grid-template-columns: 1fr;
+        margin-top: 40px;
     }
 
     .footer-content img{
         width: 150px;
     }
 
-}
-
-
-
-@media (max-width:329px){
-    
-
     .each{
         justify-content: center;
         align-items: center;
         text-align: center;
+        
     }
 
     .footer-content{
@@ -178,4 +175,8 @@
         align-items: center;
         text-align: center;
     }
+
 }
+
+
+
