--- a/src/pages/HeroComponents/showcase.css
+++ b/src/pages/HeroComponents/showcase.css
@@ -5,7 +5,8 @@
     padding: 25px 0;
 }
 
-.hero-container{
+
+.reverse-grid{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-areas: 
@@ -104,7 +105,7 @@
 
 
 @media (max-width:850px) {
-    .hero-container{
+    .reverse-grid{
         grid-template-columns: 1fr;
         grid-gap: 60px;
         grid-template-areas: 
