--- a/src/pages/WaitlistPageComponent/WaitlistScreen/waitlist.css
+++ b/src/pages/WaitlistPageComponent/WaitlistScreen/waitlist.css
@@ -47,7 +47,7 @@
 }
 
 
-@media (max-width:400px) {
+/* @media (max-width:400px) {
    
     .countdown-el h1{
         font-size: 20px;
@@ -62,4 +62,4 @@
         font-size: 20px;
     }
         
-}
+} */
