--- a/src/pages/AboutComponent/about.css
+++ b/src/pages/AboutComponent/about.css
@@ -1,17 +1,22 @@
 .about{
     min-height: 300px;
     padding: 80px 0;
-    /* border: 2px solid red; */
 }
+
+
 
 .about-container{
     display: grid;
     grid-gap: 30px;
-    grid-template-columns: repeat(4, 1fr);
-    overflow-x: auto;
-    width: 85%;
-    margin: 0 auto;
-    min-height: 400px;
+    grid-template-columns: 1fr 3fr;
+    overflow-x: hidden;
+    /* min-height: 400px; */
+}
+
+.about-scroll{
+    display: flex;
+    gap: 30px;
+    /* align-items: center; */
 }
 
 .about-container::-webkit-scrollbar{
@@ -20,7 +25,6 @@
 
 .box{
     width: 400px;
-    /* min-height: 450px; */
     padding: 40px;
     background-color: #FAFAFA;
 }
@@ -54,17 +58,7 @@
 }
 
 
-/* .bigger-box::after{
-    content: "";
-    position: absolute;
-    width: 150px;
-    height: 150px;
-    top: 0;
-    right: 50px;
-    background-image: url('../../../public/images/about-arrow.png');
-    background-repeat: no-repeat;
-    
-} */
+
 
 
 
@@ -79,25 +73,7 @@
     gap: 15px;
 }
 
-.buttons > button{
-    border: none;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: transparent;
-    cursor: pointer;
-    border: 1.3px solid #fff;
-    color: #fff;
-    transition: 200ms ease-in-out;
-}
 
-.buttons > button:hover{
-    background-color: #fff;
-    color: #4087EA;
-}
 
 .icon-btn{
     border: none;
@@ -110,6 +86,10 @@
     cursor: pointer;
 }
 
+.icon-btn .uil{
+    font-size: 32px;
+    color: #4087EA;
+}
 
 
 
@@ -127,6 +107,10 @@
     .about-container{
         width: 100%;
         grid-template-columns: 1fr;
+    }
+
+    .about-scroll{
+        flex-direction: column;
     }
 
     .buttons{
@@ -163,7 +147,7 @@
     
 
     .push{
-        margin-top: -120px;
+        margin-top: -120px; 
     }
 
 }
