--- a/src/pages/HeroComponents/showcase.css
+++ b/src/pages/HeroComponents/showcase.css
@@ -42,8 +42,12 @@
     max-width: 400px;
 }
 
-.hero-image{
+.showcase-image{
     grid-area: box-b;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
 }
 
 
@@ -105,6 +109,11 @@
 
 
 @media (max-width:850px) {
+
+    .hero{
+        background-color: transparent;
+    }
+
     .reverse-grid{
         grid-template-columns: 1fr;
         grid-gap: 60px;
