--- a/src/pages/NavbarComponent/navbar.css
+++ b/src/pages/NavbarComponent/navbar.css
@@ -1,10 +1,19 @@
+.navbar{
+    position: sticky;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    background-color: #fff;
+}
 
 .navbar-container{
-    display: flex;
     height: 90px;
+    display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 10px;
+
 }
 
 .links a{
@@ -44,7 +53,7 @@
 
 
 .menu{
-    font-size: 25px;
+    font-size: 40px;
     display: none;
 }
 
