--- a/src/pages/WaitlistPageComponent/AwaitingForm/await.css
+++ b/src/pages/WaitlistPageComponent/AwaitingForm/await.css
@@ -5,7 +5,17 @@
 .await-container{
     background-color: #FAFAFF;
     padding: 100px 60px;
-    grid-gap: 30px;
+    /* grid-gap: 30px; */
+    border-radius: 15px;
+}
+
+.await-image{
+    height: 500px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* border: 1px solid red; */
 }
 
 
@@ -14,8 +24,12 @@
 }
 
 .col-content form h3{
-    margin-bottom: 30px;
+    margin-bottom: 35px;
     font-size: 30px;
+}
+
+.await-container .col-2{
+    grid-gap:30px;
 }
 
 .col-content form input{
@@ -38,8 +52,16 @@
     border-radius: 8px;
 }
 
+
 .input-field{
     margin-bottom: 20px;
+    position: relative;
+}
+
+.input-field .icon{
+    position: absolute;
+    right: 15px;
+    top: 15px;
 }
 
 .input-flex{
@@ -93,6 +115,11 @@
         background-color: transparent;
     }
 
+    .await-container{
+        padding: 0;
+        background-color: transparent;
+    }
+
     
     
     
@@ -108,3 +135,9 @@
 }
 
 
+
+@media (max-width:500px) {
+    .await-image{
+        height: fit-content;
+    }
+}
