--- a/src/pages/WaitlistPageComponent/WaitlistScreen/waitlist.css
+++ b/src/pages/WaitlistPageComponent/WaitlistScreen/waitlist.css
@@ -2,10 +2,16 @@
     background-color: #ffffff;
 }
 
+.waitlist-image{
+    grid-area: box-b;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
 
-.hero img{
-    max-width: 100%;
-    height: 100%;
+.col-2.waitlist-col{
+    grid-gap: 0px;
 }
 
 .waitlist-container .bold{
@@ -13,10 +19,6 @@
     max-width: 400px;
     font-weight: 500;
     line-height: 1.2;
-}
-
-.mobile-screen{
-    display: none;
 }
 
 
@@ -58,30 +60,14 @@
 }
 
 
-/* @media (max-width:400px) {
-   
-    .countdown-el h1{
-        font-size: 20px;
-    }
 
-    
-    .countdown-el small{
-        font-size: 10px;
-    }
 
-    .big-colon{
-        font-size: 20px;
-    }
-        
-} */
 
-@media (max-width:850px){
-    .mobile-screen{
-        display: block;
-    }
 
-    .large-screen{
-        display: none;
+
+@media (max-width:850px) {
+    .col-2.waitlist-col{
+        grid-gap: 30px;
     }
 }
 
