--- a/src/pages/AboutComponent/about.css
+++ b/src/pages/AboutComponent/about.css
@@ -1,6 +1,8 @@
 .about{
     min-height: 300px;
     padding: 80px 0;
+    overflow: hidden;
+    /* border: 2px solid red; */
 }
 
 
@@ -9,14 +11,18 @@
     display: grid;
     grid-gap: 30px;
     grid-template-columns: 1fr 3fr;
-    overflow-x: hidden;
+    overflow-y: auto;
     /* min-height: 400px; */
 }
 
 .about-scroll{
     display: flex;
     gap: 30px;
-    /* align-items: center; */
+    max-height: fit-content;
+    /* border: 3px solid green; */
+    /* overflow-y: auto; */
+    /* height: 500px; */
+    
 }
 
 .about-container::-webkit-scrollbar{
@@ -27,6 +33,7 @@
     width: 400px;
     padding: 40px;
     background-color: #FAFAFA;
+    min-height: 200px;
 }
 
 
