--- a/src/pages/MobileComponent/mobile.css
+++ b/src/pages/MobileComponent/mobile.css
@@ -13,44 +13,34 @@
 }
 
 .mobile-image-container{
+   position: relative;
     display: flex;
-    align-items: center;
-    justify-content: space-around;
-    margin-bottom: 100px;
-    grid-gap: 40px;
-    overflow-x: auto;
+    overflow: auto;
 }
 
-.mobile-image-container::-webkit-scrollbar{
-    width: 0;
-}
+/* .mobile-image-container img{
+    max-width: 100%;
+} */
 
-.mobile-image-container::after{
-    content: "";
+.background{
     position: absolute;
-    /* display: block; */
-    left: 0;
-    top: 160px;
-    background-image: url("../../../public/images/background.png");
-    background-repeat: no-repeat;
-    /* background-color: red; */
-    z-index: -1;
-    width:600px;
-    height: 600px;
+    /* left: 0; */
 }
 
-.mobile-image-container::before{
-    content: "";
-    position: absolute;
-    display: block;
+.bg2{
+    bottom: 0;
     right: 0;
-    bottom: 0px;
-    background-image: url("../../../public/images/background.png");
-    background-repeat: no-repeat;
-    z-index: -1;    
-    width:600px;
-    height: 600px;
 }
+.bg3{
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+}
+.bg4{
+    top: 0;
+    right: 0;
+}
+
 
 .mobile-content p{
     font-size: 20px;
@@ -66,8 +56,42 @@
     margin-top: 190px;
 }
 
-
-
+/* 
+.mySwiper{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    /* background-color: red; 
+    
+} */
+  
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    /* background: #fff; */
+    min-height: 400px;
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+  
+  .swiper-slide img {
+    /* display: block;
+    width: 100%;
+    height: 100%; */
+    object-fit: cover;
+  }
 
 
 
