--- a/src/pages/WhatWeOfferComponent/offer.css
+++ b/src/pages/WhatWeOfferComponent/offer.css
@@ -10,9 +10,10 @@
 
 .offer-header h1{
     font-size: 50px;
-    font-weight: 500;
+    font-weight: 800;
     line-height: 1.2;
     margin-bottom: 20px;
+    border: 1px solid red;
 }
 
 .header-content{
