--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: poppins;
+    /* font-family: poppins; */
+    font-family: 'Plus Jakarta Sans', sans-serif;
     /* border: 1px solid red; */
 }
+ @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400;1,500&display=swap'); 
 
 *::after{
     margin: 0;
@@ -46,6 +48,8 @@ p{
 a{
     color: #444;
 }
+
+
 
 option{
     padding: 10px;
