--- a/src/pages/WaitlistPageComponent/WaitlistScreen/waitlist.css
+++ b/src/pages/WaitlistPageComponent/WaitlistScreen/waitlist.css
@@ -54,7 +54,9 @@
     .countdown-el h1{
         font-size: 30px;
     }
-    
+    .waitlist-container .bold{
+        font-size: 50px;
+    }
 }
 
 
