--- a/src/pages/WaitlistPageComponent/WaitlistScreen/waitlist.css
+++ b/src/pages/WaitlistPageComponent/WaitlistScreen/waitlist.css
@@ -71,11 +71,7 @@
 }
 
 
-@media (max-width:294px){
-    /* .waitlist-container .bold{
-        font-size:30px;
-    } */
-}
+
 
 @media (max-width:500px) {
     .countdown{
@@ -91,8 +87,19 @@
 
 @media (max-width:400px) {
     .waitlist-container .bold{
-        font-size: 40px !important;
+        font-size: 45px !important;
+        /* border: 1px solid red; */
     }
+
+    .countdown-el small{
+        font-size: 10px;
+    }
+    
+    .big-colon{
+        font-size: 30px;
+    }
+    
+    
     
 }
 
