--- a/src/pages/NavbarComponent/navbar.css
+++ b/src/pages/NavbarComponent/navbar.css
@@ -4,7 +4,13 @@
     top: 0;
     left: 0;
     z-index: 9999;
-    background-color: #fff;
+
+    background-color: #FDFDFD;
+}
+
+.navbar.scrolled{
+    background-color: rgba(255, 255, 255, 0.5);
+
 }
 
 .navbar-container{
