--- a/src/pages/NavbarComponent/navbar.css
+++ b/src/pages/NavbarComponent/navbar.css
@@ -69,12 +69,17 @@
     display: none;
 }
 
+.nav-mobile-top{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
+    padding-bottom: 0;
+}
+
 .close-btn{
     display: none;
-    position: absolute;
-    top: 20px;
-    font-size: 20px;
-
+    font-size: 40px;
 }
 
 .btn-nav{
@@ -101,7 +106,9 @@
 
 
 @media (max-width:850px){
-  
+    .navbar{
+        background-color: #fff;
+    }
 
     .mobile-logo{
         display: flex;
@@ -120,25 +127,37 @@
     }
 
     .links{
-        padding: 2rem;
-        padding-top: 3rem;
+        padding: 0;
         display: block;
-        height: 100%;
+        /* height: 100%; */
+        box-shadow: 0 2px 3px rgba(0, 0, 0,0.3);
         position: fixed;
-        top: 0;
+        left: 0;
+        top: -100%;
         width: 100%;
-        right: -100%;
+        /* right: -100%; */
         background-color: #fff;
         transition: 400ms ease-in-out;
         z-index: 10000;
     }
 
+    .links li a{
+        display: block;
+        padding: 20px;
+    }
+
+    .links li .btn{
+        border-radius: 0;
+        background-color: #4087ea70;
+        color: #000;
+    }
+
     .links.show{
-        right: 0;
+        top: 0;
     }
 
     .links li{
-        margin-bottom: 50px;
+        /* margin-bottom: 50px; */
         text-align: center;
     }
 }
