--- a/src/pages/NavbarComponent/navbar.css
+++ b/src/pages/NavbarComponent/navbar.css
@@ -132,8 +132,8 @@
         /* height: 100%; */
         box-shadow: 0 2px 3px rgba(0, 0, 0,0.3);
         position: fixed;
-        left: 0;
-        top: -100%;
+        right: -100vw;
+        top: 0%;
         width: 100%;
         /* right: -100%; */
         background-color: #fff;
@@ -153,7 +153,7 @@
     }
 
     .links.show{
-        top: 0;
+        right: 0;
     }
 
     .links li{
