--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* font-family: poppins; */
     font-family: 'Plus Jakarta Sans', sans-serif;
     /* border: 1px solid red; */
 }
- @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400;1,500&display=swap'); 
+
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400;1,500&display=swap'); 
 
 *::after{
     margin: 0;
@@ -27,6 +27,12 @@ img{
     object-fit: cover;
     max-width: 100%;
     display: block;
+}
+
+h1{
+    font-weight: 700;
+    line-height: 1.2;
+    font-size: 60px;
 }
 
 p{
@@ -134,13 +140,13 @@ option{
 }
 
 
-.reverse{
+/* .reverse{
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-areas: 
     "box-a box-b";
 
-}
+} 
 
 
 .box-a{
@@ -149,6 +155,14 @@ option{
 
 .box-b{
     grid-area: box-b;
+}*/
+
+
+.reverse-grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 
+    "box-a box-b";
 }
 
 
@@ -157,6 +171,13 @@ option{
     display: none;
 }
 
+
+
+@media (max-width:1015px){
+    h1{
+        font-size: 50px;
+    }
+}
 
 @media (max-width:500px){
     .mobile-screen{
@@ -172,4 +193,25 @@ option{
 
     }
 
+
+    
+    .btn:hover{
+        background-color: #4087EA;
+        color: #fff;
+    }
+
+  
+
+    h1{
+        font-size: 50px;
+        font-weight: 600;
+    }
+
+}
+
+
+@media (max-width:360px){
+   h1{
+        font-size:37px;
+    }
 }
