--- a/src/pages/NavbarComponent/navbar.css
+++ b/src/pages/NavbarComponent/navbar.css
@@ -1,10 +1,9 @@
 .navbar{
+    /* border: 1px solid red; */
     position: sticky;
-    width: 100%;
     top: 0;
     left: 0;
-    z-index: 9999;
-
+    z-index: 1000;
     background-color: #FDFDFD;
 }
 
@@ -75,6 +74,7 @@
     justify-content: space-between;
     padding: 1rem;
     padding-bottom: 0;
+    display: none;
 }
 
 .close-btn{
@@ -133,8 +133,9 @@
         box-shadow: 0 2px 3px rgba(0, 0, 0,0.3);
         position: fixed;
         right: -100vw;
-        top: 0%;
-        width: 100%;
+        top: 90px;
+        
+        width: 200px;
         /* right: -100%; */
         background-color: #fff;
         transition: 400ms ease-in-out;
@@ -143,7 +144,7 @@
 
     .links li a{
         display: block;
-        padding: 20px;
+        padding: 10px;
     }
 
     .links li .btn{
@@ -153,7 +154,7 @@
     }
 
     .links.show{
-        right: 0;
+        right: 8%;
     }
 
     .links li{
