--- a/src/pages/WaitlistPageComponent/AwaitingForm/await.css
+++ b/src/pages/WaitlistPageComponent/AwaitingForm/await.css
@@ -7,6 +7,7 @@
     padding: 100px 60px;
     /* grid-gap: 30px; */
     border-radius: 15px;
+    margin-bottom: 0;
 }
 
 .await-image{
@@ -30,6 +31,7 @@
 
 .await-container .col-2{
     grid-gap:30px;
+    margin-bottom: 0;
 }
 
 .col-content form input{
@@ -170,10 +172,43 @@ select::-ms-expand {
     top: 15px;
 }
 
+.col-2{
+    display: grid;
+    grid-gap: 70px;
+    margin-bottom: 50px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 
+    "box-b box-a";
+}
 
+.col-content{
 
+    grid-area: box-a;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start ;
+    justify-content: center;
+}
 
+.col-image {
+    
+    height: 470px;
+    grid-area: box-b;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
 
+.loading{
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    background-color: rgba(0, 0, 0, 0.3);
+    left: 0;
+    top: 0;
+    z-index: 1;
+}
 
 
 
@@ -216,7 +251,13 @@ select::-ms-expand {
         background-color: transparent;
     }
 
-    
+    .col-2{
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+            "box-b "
+            "box-a";
+    }
+
     
     
     .form-buttons .btn{
@@ -237,10 +278,14 @@ select::-ms-expand {
         height: fit-content;
     }
 
+    .col-image{
+        height: fit-content;
+    }
+
     
-.input-flex{
-    display: flex;
-    gap: 10px;
-    /* background-color: red; */
-}
+    .input-flex{
+        display: flex;
+        gap: 10px;
+        /* background-color: red; */
+    }
 }
