--- a/src/pages/WaitlistPageComponent/WaitlistScreen/waitlist.css
+++ b/src/pages/WaitlistPageComponent/WaitlistScreen/waitlist.css
@@ -98,4 +98,18 @@
     
 }
 
+@media (max-width:340px){
+    .countdown-el h1{
+        font-size: 30px;
+    }
+
+    .big-colon{
+        font-size: 20px;
+    }
+
+    .countdown-el small{
+        font-size: 8px;
+    }
+
+}
 
