--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
     /* border: 1px solid red; */
 }
 
-/* @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400;1,500&display=swap');  */
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400;1,500&display=swap'); 
 
 *::after{
     margin: 0;
