local fonts added

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,18 @@
     /* border: 1px solid red; */
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400;1,500&display=swap'); 
+/* @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400;1,500&display=swap');  */
+
+@font-face {
+    font-family: "Plus Jakata Sans";
+    src: url("./fonts/PlusJakartaSans-Regular.ttf");
+}
+
+@font-face {
+    font-family: "Plus Jakata Sans";
+    src: url("./fonts/PlusJakartaSans-ExtraBold.ttf");
+    font-weight: 700;
+}
 
 *::after{
     margin: 0;
@@ -230,11 +241,11 @@ option{
 }
 
 
-@media (max-width:1024px){
+/* @media (max-width:1024px){
     h1{
         font-size: 50px;
     }
-}
+} */
 
 @media (max-width:1015px){
     h1{
