--- a/src/App.css
+++ b/src/App.css
@@ -4,20 +4,24 @@
     box-sizing: border-box;
     font-family: 'Plus Jakarta Sans', sans-serif;
     /* border: 1px solid red; */
-}
-
-/* @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;1,200;1,300;1,400;1,500&display=swap');  */
-
-@font-face {
-    font-family: "Plus Jakata Sans";
-    src: url("./fonts/PlusJakartaSans-Regular.ttf");
+    /* font-family: "plus"; */
 }
 
 @font-face {
-    font-family: "Plus Jakata Sans";
-    src: url("./fonts/PlusJakartaSans-ExtraBold.ttf");
+    font-family: "plus";
+    src: local("AssistantRegular"),
+      url("./fonts/PlusJakartaSans-Regular.ttf") format("truetype");
+    font-weight: normal;
+  }
+
+  @font-face {
+    font-family: "plus";
+    src: local("AssistantRegular"),
+      url("./fonts/PlusJakartaSans-ExtraBold.ttf") format("truetype");
     font-weight: 700;
-}
+  }
+
+ /* @import url('https://font/.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap'); */
 
 *::after{
     margin: 0;
@@ -41,7 +45,7 @@ img{
 }
 
 h1{
-    font-weight: 700;
+    font-weight: 800;
     line-height: 1.2;
     font-size: 60px;
 }
