--- a/src/App.css
+++ b/src/App.css
@@ -6,22 +6,10 @@
     /* border: 1px solid red; */
     /* font-family: "plus"; */
 }
+ 
+ 
+/* @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;800&display=swap'); */
 
-@font-face {
-    font-family: "plus";
-    src: local("AssistantRegular"),
-      url("./fonts/PlusJakartaSans-Regular.ttf") format("truetype");
-    font-weight: normal;
-  }
-
-  @font-face {
-    font-family: "plus";
-    src: local("AssistantRegular"),
-      url("./fonts/PlusJakartaSans-ExtraBold.ttf") format("truetype");
-    font-weight: 700;
-  }
-
- /* @import url('https://font/.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap'); */
 
 *::after{
     margin: 0;
