--- a/src/pages/WaitlistPageComponent/AwaitingForm/await.css
+++ b/src/pages/WaitlistPageComponent/AwaitingForm/await.css
@@ -196,12 +196,16 @@ select::-ms-expand {
 
 .col-image {
     
-    height: 470px;
+    /* height: 470px; */
     grid-area: box-b;
     display: flex;
     align-items: center;
     justify-content: center;
     overflow: hidden;
+}
+
+.awaiting-image{
+    height: fit-content;
 }
 
 .loading{
