--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
  
  
-/* @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;800&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;800&display=swap');
 
 
 *::after{
