--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -1,26 +1,24 @@
-.login-container {
+.login{
+    height: fit-content;
     background-color: #F6F9FE;
-    position: fixed;
-    left: 0;
-    top: 0;
-    height: 100vh;
-    width: 100vw;
+    
+}
+
+.login-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 20px;
+    padding: 60px;
+    flex-direction: column;
 }
 
 .login-bottom {
-    position: absolute;
-    left: 50%;
-    bottom: 50px;
-    transform: translate(-50%);
+    margin-top: 80px;
 }
 
 .form-field{
     background-color: #ffffff;
-    width: 450px;
+    max-width: 450px;
     min-height: 400px;
     border-radius: 10px;
 }
@@ -90,6 +88,9 @@
         font-size: 12px;
     }
 
+    .login-container{
+        padding: 20px;
+    }
     
     .form-field form{
         padding: 40px 20px;
