--- a/src/pages/NavbarComponent/adminnav.css
+++ b/src/pages/NavbarComponent/adminnav.css
@@ -1,14 +1,30 @@
 .admin-nav{
-    /* display: ; */
-    /* width: 100px; */
     min-height: 90vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 50px;
-    padding-top: 30px;
+    padding: 30px 0;
     background: #FFFFFF;
     box-shadow: -2px -5px 12px rgba(204, 204, 204, 0.25), -2px -5px 4px rgba(204, 204, 204, 0.25), 2px 5px 12px rgba(204, 204, 204, 0.25), 2px 5px 4px rgba(204, 204, 204, 0.25);
     border-radius: 16px;
 
+}
+
+
+
+
+@media (max-width:850px){
+    .admin-nav{
+        width: 70px;
+    }
+}
+
+
+@media (max-width : 500px){
+    .admin-nav{
+        width: 100%;
+        min-height: fit-content;
+        margin-bottom: 30px;
+    }
 }
