--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Plus Jakarta Sans', sans-serif;
+    /* font-family: 'Plus Jakarta Sans', sans-serif; */
+    font-family: 'Montserrat', sans-serif;
     /* border: 1px solid red; */
     /* font-family: "plus"; */
 }
  
  
-@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;800&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;800&display=swap'); */
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Plus+Jakarta+Sans:wght@400;800&display=swap')
 
 
 *::after{
