--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
  
 /* @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;800&display=swap'); */
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Plus+Jakarta+Sans:wght@400;800&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Plus+Jakarta+Sans:wght@400;800&display=swap');
 
 
 *::after{
@@ -315,7 +315,7 @@ option{
 
     h1{
         font-size: 45px;
-        font-weight: 700;
+        /* font-weight: 700; */
     }
 
 }
