--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,14 @@
 }
  
  
-/* @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;800&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;800&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;800&family=Plus+Jakarta+Sans:wght@400;800&display=swap');
+
+
+h1,h2,h3{
+    font-family: 'Montserrat', sans-serif;
+}
 
 
 *::after{
@@ -49,6 +54,8 @@ h1{
 
 p{
     font-size: 15px;
+    
+    font-family: 'Plus Jakarta Sans', sans-serif;
 }
 
 a{
