--- a/src/pages/ContactUsPage/contactUs.css
+++ b/src/pages/ContactUsPage/contactUs.css
@@ -7,6 +7,10 @@
     object-fit: cover;
     margin-bottom: 50px;
 }
+
+form{
+    width: 100%;
+}
 .contact-fields {
     margin-bottom: 20px;
     position: relative;
@@ -41,4 +45,47 @@
 .contact-form p{
     margin: 10px 0 30px 0;
     font-size: 14px;
+}
+
+
+.col-2{
+    display: grid;
+    grid-gap: 70px;
+    margin-bottom: 50px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 
+    "box-b box-a";
+}
+
+.col-content{
+
+    grid-area: box-a;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start ;
+    justify-content: center;
+}
+
+.col-image {
+    
+    /* height: 470px; */
+    grid-area: box-b;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+
+
+
+
+@media (max-width:850px){
+    .col-2{
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+            "box-b "
+            "box-a";
+    }
+
 }
